# fastapi

./: .gitattributes  config.json  pyproject.toml  railway.json  requirements.txt
assets/: config.json
hooks/: post-checkout
naturalness_score/: api.py  testing_local.py
naturalness_score/classifier/: model.py  naturalness_classifier.py
