[tool.poetry]
name = "railway-fastapi-template"
version = "1.3.2"
description = "This example starts up a FastAPI server"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
transformers = "^4.26.1"
pandas= "^1.5.3"
datasets= "^2.9.0"
git-lfs= "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
